# shutongwen

./: .gitignore  ABOUT.md  BUILD_INSTRUCTIONS.md  BUILD_STATUS.md  CMakeLists.txt  LICENSE  README.md  ShuTongWenIME.proj  ShuTongWenIME.wxs  VERSION  build.ps1  build_final.ps1  build_fixed.ps1  build_full.ps1  build_installer.ps1  build_minimal.ps1  build_quick.bat  build_simple.ps1  build_ultra_minimal.ps1  install.bat  install.ps1
include/compatibility/: CompatibilityTest.h
include/data/: UserPhrase.h
include/ime/: DAGParser.h  DictionaryManager.h  EmojiAssociator.h  IMEFramework.h  IMEModule.h  InputProcessor.h  InputSession.h  MixedInputProcessor.h  PinyinParser.h
include/ime/adaptive/: AdaptivePipeline.h
include/ime/cache/: InputCache.h
include/ime/language/: CandidateRanker.h  ContextAnalyzer.h  LanguageModel.h  NGramModel.h  SegmentGraph.h  UserBehaviorModel.h
include/ime/perception/: LatencyOptimizer.h
include/ime/pipeline/: InputPipeline.h
include/ime/replay/: InputReplay.h
include/ime/semantic/: InputSemanticLayer.h
include/ime/tracing/: InputTrace.h
include/ipc/: IPCMessage.h  IPCProtocol.h  PipeClient.h  PipeServer.h
include/ocr/: OCRService.h
include/platform/: Win11Platform.h
include/platform/caret/: CaretLocator.h  DpiTransformer.h  WindowTracker.h
include/platform/profiles/: WindowProfile.h
include/plugins/: PluginInterface.h
include/telemetry/: CrashReporter.h  LatencyTracker.h  PerformanceCounter.h
include/testing/golden/: GoldenPath.h
include/tsf/: TSFComInterfaces.h  TSFTextInputProcessor.h  TextLayoutTracker.h
include/ui/: CandidateWindow.h  CompositionWindow.h  IMEWindow.h
include/utils/: ClipboardManager.h  config.h  logger.h  string_utils.h  win32_utils.h
include/watchdog/: Watchdog.h
installer/: ShuTongWenIME.wxs  build_installer_exe.ps1  build_offline_installer.ps1  embed_dll.py  installer.cpp  self_extract.cpp
installer_package/: install.bat
src/ai/: CMakeLists.txt
src/compatibility/: CMakeLists.txt  CompatibilityTest.cpp
src/core/: CMakeLists.txt  ShuTongWenCore.cpp
src/data/: CMakeLists.txt  UserPhrase.cpp
src/ime/: CMakeLists.txt  DAGParser.cpp  DictionaryManager.cpp  EmojiAssociator.cpp  IMEFramework.cpp  IMEModule.cpp  InputProcessor.cpp  InputSession.cpp  MixedInputProcessor.cpp  PinyinParser.cpp  ShuTongWenIME.cpp
src/ime/adaptive/: AdaptivePipeline.cpp
src/ime/cache/: InputCache.cpp
src/ime/language/: CandidateRanker.cpp  ContextAnalyzer.cpp  LanguageModel.cpp  NGramModel.cpp  SegmentGraph.cpp  UserBehaviorModel.cpp
src/ime/perception/: LatencyOptimizer.cpp
src/ime/pipeline/: InputPipeline.cpp
src/ime/replay/: InputReplay.cpp
src/ime/semantic/: InputSemanticLayer.cpp
src/ime/tracing/: InputTrace.cpp
src/ipc/: CMakeLists.txt  IPCMessage.cpp  IPCProtocol.cpp  PipeClient.cpp  PipeServer.cpp
src/ocr/: OCRService.cpp
src/platform/: CMakeLists.txt  Win11Platform.cpp
src/platform/caret/: CaretLocator.cpp  DpiTransformer.cpp  WindowTracker.cpp
src/platform/profiles/: WindowProfile.cpp
src/plugins/: PluginInterface.cpp
src/services/: CMakeLists.txt
src/telemetry/: CMakeLists.txt  CrashReporter.cpp  LatencyTracker.cpp  PerformanceCounter.cpp
src/testing/: CMakeLists.txt
src/testing/golden/: GoldenPath.cpp
src/tests/: CMakeLists.txt  IMEFrameworkTest.cpp
src/tsf/: CMakeLists.txt  TSFComInterfaces.cpp  TSFTextInputProcessor.cpp  TextLayoutTracker.cpp
src/ui/: CMakeLists.txt  CandidateWindow.cpp  CompositionWindow.cpp  IMEWindow.cpp
src/ui/ime_ui/: App.xaml  MainWindow.xaml  MainWindow.xaml.cs  Program.cs  ShuTongWenUI.csproj  app.manifest
src/utils/: CMakeLists.txt  ClipboardManager.cpp  config.cpp  logger.cpp  string_utils.cpp  win32_utils.cpp
src/watchdog/: CMakeLists.txt  Watchdog.cpp
